# api/app/Models/Events.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Events extends Model
+{
+    use HasFactory;
+
+    protected $table = 'events';
+
+    protected $fillable = [
+        'slug',
+        'author',
+        'location',
+        'content'
+    ];
+
+    protected $casts = [
+        'dates' => 'array'
+    ];
+
+    public function author()
+    {
+        return $this->belongsTo(Users::class, 'author');
+    }
+
+}
